Fix some broken styles

--- a/MudBlazor.Extensions/wwwroot/css/components/_select.scss
+++ b/MudBlazor.Extensions/wwwroot/css/components/_select.scss
@@ -108,6 +108,8 @@
     font-weight: 500;
     padding-top: 16px;
     padding-bottom: 16px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 .mud-ex-list-subheader-secondary-background {
