--- a/MudBlazor.Extensions/wwwroot/mudBlazorExtensions.scss
+++ b/MudBlazor.Extensions/wwwroot/mudBlazorExtensions.scss
@@ -243,3 +243,11 @@
 .mud-dialog-container:has(.mud-ex-dialog-no-margin) {
     padding: 0px !important;
 }
+
+
+
+/*WORKAROUND CURRENTLY input label content VARIANT text datalist BROKEN*/
+
+.mud-ex-select-variant-text .mud-input-label-inputcontrol {
+    top: -15px;
+}
